# arm11

./: .gitignore  CMakeLists.txt  Makefile
doc/: Checkpoint.tex  instructions_format_test.docx
extension/: program  test.c
src/: ARM11.h  Makefile  arm11_utils.c  arm11_utils.h  assemble.c  barrel_shifter.c  decode.c  decode.h  decode_utils.c  decode_utils.h  emulate.c  emulate.h  execute.c  execute_dp_mul.c  execute_dp_mul.h  gpio.s  led  masks.h  tests.c  utils.c  utils.h
src/assemble/: assemble.c  assemble.h  assembleBranch.c  assembleBranch.h  assembleDP.c  assembleDP.h  assembleMUL.c  assembleMUL.h  assembleSDT.c  assembleSDT.h  encode.c  encode.h  encode_SDT.c  encode_SDT.h  multiply_assemble.c  multiply_assemble.h  utils.h
src/decode/: decode.c  decode.h  decode_utils.c  decode_utils.h  masks.h
src/emulate/: ARM11.h  emulate.c  emulate.h  tests.c
src/emulate/decode/: decode.c  decode_utils.c  decode_utils.h
src/emulate/execute/: barrel_shifter.c  barrel_shifter.h  branch_instruction.c  execute.c  execute.h  execute_SDT.c  execute_b.c  execute_mul.c  execute_mul.h  execute_sdt.c  execute_utils.h
src/execute/: barrel_shifter.c  barrel_shifter.h  branch_instruction.c  branch_instruction.h  execute.c  execute.h  execute_SDT.c  execute_SDT.h  execute_dp.c  execute_dp.h  execute_dp_mul.c  execute_dp_mul.h  execute_mul.c  execute_mul.h  execute_utils.c  execute_utils.h
test/: run_all.sh
